--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: var(--col-bg);
+    overflow: hidden;
 }
 
 a {
@@ -31,7 +32,7 @@ a {
     flex-direction: row;
     background-color: var(--col-header);
     width: 100vw;
-    height: 3vw;
+    height: 6.3vh;
     align-items: center;
     justify-content: space-between;
 }
@@ -69,7 +70,7 @@ a {
 .leaderBoard {
     display: flex;
     width: 100vw;
-    height: 80vh;
+    height: 100vh;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -96,10 +97,6 @@ td {
 }
 
 @media screen and (max-width:850px) {
-    .navContainer {
-        height: 5vh;
-    }
-
     .websiteName {
         visibility: hidden;
     }
