--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ body {
     margin: 0;
     padding: 0;
     background-color: var(--col-bg);
-    overflow: hidden;
 }
 
 a {
@@ -69,14 +68,15 @@ a {
 
 .leaderBoard {
     display: flex;
-    width: 100vw;
-    height: 100vh;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction: row;
+    justify-content: space-evenly;
     align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin: 20px;
 }
 
-.table {
+.subLeaderBoard {
     background-color: var(--col-header);
     border-radius: 5px;
     padding: 20px;
